--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,19 @@ h1 {
 }
 
 .row {
+	position: relative;
 	float: left;
 	width: auto;
+}
+
+.row_content {
+	position: relative;
+}
+
+.row_background {
+	position: absolute;
+	height: 100%;
+	top: 0;
 }
 
 .cell {
@@ -38,18 +49,18 @@ h1 {
 }
 
 .passed_item {
-	background-color: #E1F5FE;
 	color: rgba(0, 0, 0, 0.38);
+}
+
+.passed_item .row_background {
+	width: 100%;
+	background-color: #E1F5FE;
 }
 
 .incoming_item {
 }
 
 .current_item {
-	background: -webkit-linear-gradient(left, #FFEBEE 50%, white 50%);
-    background: -moz-linear-gradient(left, #E8F5E9 50%, white 50%);
-    background: -ms-linear-gradient(left, #E8F5E9 50%, white 50%);
-    background: linear-gradient(left, #E8F5E9 50%, white 50%);
 }
 
 #start_time, #time, #time_left {
