Update item list and wordings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,10 @@ label {
 	color: rgba(27,94,32,0.87);	
 }
 
+.orange900 {
+	color: rgba(230,81,0,0.87);
+}
+
 .red900 {
 	color: rgba(183,28,28,0.87);
 }
