--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ label {
 	padding-right: 10px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Roboto Condensed', serif;
+}
+
 .success {
 	color: #4CAF50;	
 }
