--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Roboto Condensed', serif;
 }
 
+.attribution, .attribution ul li a {
+	font-size: 12px !important;
+}
+
 .success {
 	color: #4CAF50;	
 }
